added analysis to main rmd file

--- a/FinalPresentation.Rmd
+++ b/FinalPresentation.Rmd
@@ -504,3 +504,167 @@ stacked_survey <- long_percentage %>%
 stacked_survey
 ```
 
+
+# The Impact of Academics on Sports Participation
+# Joseph Bernardi
+
+  An essential part of our hypothesis is that an increased amount of focus on academics will lower the participation in sports, as students will have less time to devote to sports.
+
+  Initially, I tested AP enrollment against the participation in high school sports, but found no significant correlation. I concluded that this may be due to other variables such as the differing availability of AP programs at school. Therefore, I began to analyze the relationship between SAT enrollment (per capita) and average score, as well as boys and girls sports participation (per capita).
+
+
+### SAT Enrollment and Average Score
+
+```{r State Sports Participation Data (Joseph Bernardi), echo=FALSE, message=FALSE, warning=FALSE}
+
+library(tidyverse)
+library(ggplot2)
+library(ggthemes)
+
+participationdata <- read.csv("participation_data.csv")
+
+# Condense data to get total sports participation for each state, for the 2018/2019 school year
+participationdata2 <- participationdata %>%
+  subset(year = "2018/2019") %>%
+  select(state, boys_participation, girls_participation) %>%
+  group_by(state) %>%
+  summarise(state.boys_partic = sum(boys_participation), state.girls_partic = sum(girls_participation)) %>%
+  na.omit()
+
+statepopdata <- read.csv("https://raw.githubusercontent.com/JoshData/historical-state-population-csv/primary/historical_state_population_by_year.csv")
+
+# Adjust state participation by state population
+statepopdata <- statepopdata %>%
+  rename("state" = "AK", "Population" = X135000) %>%
+  subset(X1950 == 2019) %>%
+  select(state, Population)
+
+percap.participation <- participationdata2 %>%
+  inner_join(statepopdata, by = "state") %>%
+  group_by(state) %>%
+  summarise(boys.participation.percapita = state.boys_partic / Population, girls.participation.percapita = state.girls_partic / Population, total.participation.percapita = (state.boys_partic + state.girls_partic) / Population, Population) %>%
+  pivot_longer(cols = c(boys.participation.percapita, girls.participation.percapita), names_to = "Gender", values_to = "Per Capita Participation")
+
+# Plot for participation by state and gender
+ggplot(data=percap.participation, aes(x=state, y=`Per Capita Participation`, fill=Gender)) +
+geom_bar(stat="identity", width = 0.8, position=position_dodge(width = 0.8)) + theme(axis.text=element_text(size=7, angle=45), legend.position="bottom") + scale_fill_discrete(name = "Gender", labels = c("Boys Participation", "Girls Participation")) + ggtitle("Sports Participation(Per Capita) by State and Gender in 2019")
+
+# Plot for participation by state
+ggplot(data=percap.participation, aes(x=state, y=total.participation.percapita)) + theme_calc() + geom_bar(stat="identity", width = 0.6, fill = "dark green") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation (Per Capita) by State in 2019")
+
+```
+  
+  
+Here we can observe that different states have varying levels of participation when adjusting for population size. In general, boys tend to participate in sports more than girls. Iowa and Nebraska are among the highest for per capita participation. We can also observe similar trends when comparing total participation between states.
+
+
+```{r SAT Data by State (Joseph Bernardi), echo=FALSE, message=FALSE, warning=FALSE}
+
+# Load SAT data
+SAT_data <- read.csv("SAT_data.csv")
+
+# Create a dataframe that includes metrics in a per capita sense
+Sports.vs.SAT <- percap.participation %>%
+  inner_join(SAT_data, by = "state") %>%
+  select(state, total.participation.percapita, tooktest, avg_score, Population) %>%
+  unique() %>%
+  group_by(state) %>%
+  summarise(tooktest.percapita = tooktest / Population, total.participation.percapita, avg_score, tooktest, Population)
+
+# Plot for SAT Enrollment per capita
+ggplot(data=Sports.vs.SAT, aes(x=state, y=tooktest.percapita)) + theme_stata() +
+  geom_bar(stat="identity", width = 0.6, fill = "orange") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("SAT Enrollment (Per Capita) by State in 2019")
+
+# Plot for SAT avg score per capita
+ggplot(data=Sports.vs.SAT, aes(x=state, y=avg_score)) + theme_stata() +
+  geom_bar(stat="identity", width = 0.6, fill = "light blue") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("SAT Average Total Score by State in 2019")
+
+```
+
+Here, for reference, we can observe the SAT enrollment per capita and average SAT score for each state in 2019.
+
+### Comparing Sports Participation with SAT Enrollment and Average Score
+
+```{r Comparing SAT and Sports Data (Joseph Bernardi), echo=FALSE, message=FALSE, warning=FALSE}
+
+# Plots for comparing SAT Enrollment with sports data 
+Sports.vs.SAT %>%
+  ggplot(aes(x = reorder(state, total.participation.percapita), y = tooktest.percapita)) + theme_calc() + geom_bar(stat="identity", width = 0.6, fill = "dark red") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation VS SAT Enrollment") + xlab("States from Least to Greatest in Sports Participation Per Capita") + ylab("SAT Enrollment Per Capita")
+
+Sports.vs.SAT %>%
+  ggplot(aes(x = total.participation.percapita, y = tooktest.percapita, group = 1)) + theme_calc() + geom_line(stat="identity", width = 0.6, color = "dark red") + geom_point() + geom_text(aes(label=state), size = 3, hjust=-0.3, vjust=0) + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation VS SAT Enrollment") + xlab("Sports Participation Per Capita") + ylab("SAT Enrollment Per Capita")
+
+
+```
+
+
+  First, we can examine the relationship between sports participation per capita and SAT enrollment per capita. We can observe this relationship in a couple ways, the first of which is ordering the states from least to greatest in terms of sports participation, and plotting the enrollment per capita on a bar chart. Secondly, we may use a line plot to compare the two values, while portraying the states as point labels.
+  
+  After examining both of these visualizations, it is apparent that there is no visible correlation between sports participation and SAT enrollment, as the data points are flat, and do not entail a positive or negative correlation.
+  
+```{r Comparing SAT and Sports Data Pt.2 (Joseph Bernardi), echo=FALSE, message=FALSE, warning=FALSE}
+
+# Plots for comparing SAT Score with sports data 
+Sports.vs.SAT %>%
+  group_by(state) %>%
+  summarise(sport.score_ratio = total.participation.percapita / avg_score, Population, total.participation.percapita, avg_score) %>%
+  ggplot(aes(x = reorder(state, total.participation.percapita), y = avg_score)) + theme_calc() + geom_bar(stat="identity", width = 0.6, fill = "dark blue") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation VS Average SAT Score") + xlab("States from Least to Greatest in Sports Participation Per Capita")
+
+Sports.vs.SAT %>%
+  group_by(state) %>%
+  summarise(sport.score_ratio = total.participation.percapita / avg_score, Population, total.participation.percapita, avg_score) %>%
+  ggplot(aes(x = total.participation.percapita, y = avg_score, group = 1)) + geom_point() + geom_text(aes(label=state), size = 3, hjust=-0.3, vjust=0) + theme_calc() + geom_line(stat="identity", width = 0.6, color = "dark blue") + theme(axis.text=element_text(size=7, angle=45)) + ggtitle("Sports Participation VS Average SAT Score") + xlab("Sports Participation Per Capita")
+
+
+```
+
+  Similar visualization techniques can be used to examine the relationship between sports participation per capita and the average SAT score for each state. A similar conclusion can be inferred from these visualizations, in that there seems to be no visible correlation between the two variables. Neither plot infers a positive or negative correlation, as there is no clear trend in the data points.
+  
+  In summary, the data distinctly portrays that there is no correlation between SAT enrollment/scores and participation in sports.
+  
+  
+### Comparing Sports Participation and Youth Employment in High School
+
+  Although our initial hypothesis has seemed to be refuted, let us expand a little bit on this concept of work. Lots of students work jobs after school, would this be more detrimental to sports participation?
+  
+```{r Comparing Sports Participation and Youth Employment (Joseph Bernardi), echo=FALSE, message=FALSE, warning=FALSE}
+
+employmentdata <- read.csv("employment_data.csv")
+
+participationdata3 <- participationdata
+
+# Take Year from school year
+participationdata3$year <- gsub("^.{0,5}", "", participationdata3$year)
+
+participationdata3$year <- as.integer(as.character(participationdata3$year))
+
+# Group employment and sports by Year
+employment.vs.sports <- participationdata3 %>%
+  rename(Year = year) %>%
+  select(Year, boys_participation, girls_participation) %>%
+  group_by(Year) %>%
+  summarise(state.boys_partic = sum(boys_participation), state.girls_partic = sum(girls_participation), total.partic = state.boys_partic + state.girls_partic) %>%
+  inner_join(employmentdata, by = "Year") %>%
+  drop_na()
+
+
+# Shift data to percent change format
+employment.vs.sports <- employment.vs.sports %>%
+  subset(Year > 2010) %>%
+  arrange(Year) %>%
+  mutate(pct.emp = (percent_employment - lag(percent_employment))/lag(percent_employment)*100) %>%
+  mutate(pct.partic = (total.partic - lag(total.partic))/lag(total.partic)*100) %>%
+  mutate(pct.boys = (state.boys_partic - lag(state.boys_partic))/lag(state.boys_partic)*100) %>%
+  mutate(pct.girls = (state.girls_partic - lag(state.girls_partic))/lag(state.girls_partic)*100)
+  
+# Plot percent change data
+ggplot(data=employment.vs.sports, aes(x=Year, y=pct.partic, group=1)) +
+  geom_line(aes(y = pct.boys, color = "blue")) + geom_line(aes(y = pct.girls, color = "red")) + geom_line(aes(y = pct.emp, color = "green")) + geom_line(aes(y = pct.partic, color = "purple")) + ylab("Percent Change") + ggtitle("Percent Change of Youth Employment and Sports Participation\n in Boys and Girls") + scale_color_discrete(name = "Type", labels = c("% Change in\n Girls Sports\n Participation", "% Change in\n High School\n Aged Employment", "% Change in\n Boys Sports\n Participation", "% Change in\n Total Sports\n Participation")) + theme_pander() +  theme(legend.position="bottom")
+  
+
+```
+
+  Here, we can observe that there is a noticeable positive trend in the data, inferring there to be a positive relationship between sports participation and youth employment. This defies our expectation from our hypothesis, that an increase workload would explain less involvement in sports. However, it seems like this is the exact opposite. This may have an economic factor to it, in that when the economy is doing well, students' families will be able to do better financially and afford fees for extracurricular activities for their children and not need them to necessarily get a job.
+  
+  To conclude, it is apparent that this section of our hypothesis has been proven to be incorrect, as SAT data shows a constant trend, while youth employment portrays the opposite of our expectations.
+
